# cpp_code_quality_tools

./: CMakeLists.txt  README.md
hydra/: Makefile_addrsan  Makefile_leaksan  Makefile_memsan  Makefile_ubsan  README.md
modern/: CMakeLists.txt  class_legacy_pointer.cpp  class_modern_pointer.cpp  function_legacy_pointer.cpp  function_legacy_pointer_deleter.cpp  function_modern_pointer.cpp  function_modern_pointer_deleter.cpp  legacy_pointer_ownership.cpp  modern_pointer_ownership.cpp
sanitizers/: CMakeLists.txt  address_demo.cpp  memory_demo.cpp  undefined_demo.cpp
tests/: CMakeLists.txt  smart_functions.h  tests_sf.cpp
